# bose-connect-app-linux

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DETAILS.md  DEVELOPMENT.md  Dockerfile  GEMINI.md  INFORMATION.md  LICENSE  README.md  TODO.md  codeql-analysis.yml  run-cargo.bash  run-test.bash
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: c-linter.yml  cmake-docker.yml  cmake.yml  codacy-analysis.yml  code-linter-01.yml  codeql-analysis.yml
aws/: install-runner.sh  setup.sh
docker/image/os-base/: Dockerfile  publish-docker-hub.bash
src/: .clang-format  .clang-tidy  .gitignore  .muse.toml  CMakeLists.txt  Dockerfile  bluetooth.rs  bye.CPP  bye.H  cli.rs  docker-compose.yml  hello.cu  hello.cuh  main.c  main.h  main.rs
src/bose_api/: device.rs  error.rs  mod.rs
src/bose_api/firmware/: baywolf.rs  isaac.rs  mod.rs
src/bose_api/operations/: battery.rs  connect_device.rs  device_id.rs  device_information.rs  device_status.rs  device_status_info.rs  devices_connected.rs  disconnect_device.rs  firmware_version.rs  init_connection.rs  mod.rs  paired_devices.rs  pairing.rs  remove_device.rs  self_voice.rs  serial_number.rs  voice_prompts.rs
src/script/: build-dev.bash  build-prod.bash  clang-format-fix.bash  install-dev.bash  install-prod.bash  uninstall.bash
