[package]
name = "bose-connect-app-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.16", features = ["bluetoothd", "rfcomm"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
btleplug = { version = "0.10", features = ["serde"] }
