[package]
name = "bose-connect-app-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17.4", features = ["bluetoothd", "rfcomm"] }
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0.98"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
hex = "0.4.3"
btleplug = { version = "0.11.8", features = ["serde"] }
